--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,9 @@ body {
 }
 
 .todo-list {
-    background-color: ffb4a2;
+    background-color: #d23d2e6e;
     margin: auto;
+    margin-top: 100px;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -17,12 +18,12 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 30px 20px 0;
+    padding: 10px 10px 0;
     width: 70%;
     border-bottom: 1px solid #6D6875;
     font-family: Roboto, sans-serif;
-    font-weight: 100;
-    font-size: 15px;
+    font-weight: 400;;
+    font-size: 20px;
     color: #333333;
 }
 
